welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:3: error: identifier expected but integer literal found.
	var n: Int !==0
                      ^